--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+    <style>
+        #root {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
     <div id="root"></div>
 </body>
 
