Two app instance side by side

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <style>
-        #root {
+        #root, #root2 {
             height: 100%;
             display: flex;
             align-items: center;
@@ -17,6 +17,7 @@
         }
     </style>
     <div id="root"></div>
+    <div id="root2"></div>
 </body>
 
 </html>
